// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space component Render 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a></a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <!---->
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render breadscrumb 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                </div>
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render breadscrumb 2`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li><a>
                                        Action 2
                                    </a></li>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                </div>
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render breadscrumb 3`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li><a>
                                        Action 2
                                    </a></li>
                        <li><a>
                                        Action 3
                                    </a></li>
                        <li><a>
                                        Action 4
                                    </a></li>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                </div>
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render breadscrumb 4`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li><a>
                                        Action 2
                                    </a></li>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                </div>
                <!---->
            </div>
        </nav>
        <div class="columns is-gapless" style="margin-top:5px;">
            <!---->
            <div class="column" style="padding-left:10px;padding-right:10px;">
                <nav class="nav" style="background-color:inherit;">
                    <div class="nav-left">
                        <!---->
                        <nav class="breadcrumb">
                            <ul>
                                <li><a>
                                        Action 2
                                    </a></li>
                                <li class="is-active"><a></a></li>
                            </ul>
                        </nav>
                    </div>
                    <div class="nav-right">
                        <!---->
                        <!---->
                    </div>
                </nav>
                <!---->
            </div>
            <!---->
        </div>
    </div>
    <!---->
</div>
`;

exports[`Space component Render display left menu (close) 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left"><a class="button"><i aria-hidden="true" class="fa fa-bars fa-2x"></i></a>
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                    <p class="control"><span data-label="Thumbnail" class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><i class="fa fa-th"></i></span></a>
                        </span>
                    </p>
                    <!---->
                </div>
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render display left menu (open) 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <div class="column is-one-quarter is-half-mobile">
        <aside class="menu" style="padding:5px;">
            <ul class="menu-list">
                <li>
                    <!---->
                    <!----><a class="is-active"><span class="icon"><i class="fa fa-user"></i></span>
                    Customer
                </a></li>
                <li><span><span class="icon"><i class="fa fa-user"></i></span> Setting
                    </span>
                    <ul class="menu-list">
                        <li>
                            <!---->
                            <!---->
                            <a>
                                <!---->
                                Category
                            </a>
                        </li>
                        <li>
                            <!---->
                            <!---->
                            <a>
                                <!---->
                                Address
                            </a>
                        </li>
                    </ul>
                    <!---->
                </li>
            </ul>
        </aside>
    </div>
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left"><a class="button"><i aria-hidden="true" class="fa fa-bars fa-2x"></i></a>
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                    <p class="control"><span data-label="Thumbnail" class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><i class="fa fa-th"></i></span></a>
                        </span>
                    </p>
                    <!---->
                </div>
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render display right menu (close) 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                    <p class="control"><span data-label="Thumbnail" class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><i class="fa fa-th"></i></span></a>
                        </span>
                    </p>
                    <!---->
                </div> <a class="button"><i aria-hidden="true" class="fa fa-bars fa-2x"></i></a></div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`Space component Render display right menu (open) 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a>Action : 1</a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <div class="field has-addons">
                    <p class="control"><span data-label="List" class="tooltip is-info is-left is-medium"><a disabled="disabled" class="button is-primary"><span class="icon is-small"><i class="fa fa-list"></i></span></a>
                        </span>
                    </p>
                    <p class="control"><span data-label="Thumbnail" class="tooltip is-info is-left is-medium"><a class="button"><span class="icon is-small"><i class="fa fa-th"></i></span></a>
                        </span>
                    </p>
                    <!---->
                </div> <a class="button"><i aria-hidden="true" class="fa fa-bars fa-2x"></i></a></div>
        </nav>
        <!---->
    </div>
    <div class="column is-one-quarter is-half-mobile">
        <aside class="menu" style="padding:5px;">
            <ul class="menu-list">
                <li>
                    <!---->
                    <!----><a class="is-active"><span class="icon"><i class="fa fa-user"></i></span>
                    Customer
                </a></li>
                <li><span><span class="icon"><i class="fa fa-user"></i></span> Setting
                    </span>
                    <ul class="menu-list">
                        <li>
                            <!---->
                            <!---->
                            <a>
                                <!---->
                                Category
                            </a>
                        </li>
                        <li>
                            <!---->
                            <!---->
                            <a>
                                <!---->
                                Address
                            </a>
                        </li>
                    </ul>
                    <!---->
                </li>
            </ul>
        </aside>
    </div>
</div>
`;

exports[`SpaceMenu component Render 1`] = `<ul data-server-rendered="true" class="menu-list"></ul>`;

exports[`SpaceMenu component Render with submenu 1`] = `
<ul data-server-rendered="true" class="menu-list">
    <li>
        <!---->
        <!----><a class="is-active"><span class="icon"><i class="fa fa-user"></i></span>
                    Customer
                </a></li>
    <li><span><span class="icon"><i class="fa fa-user"></i></span> Setting
        </span>
        <ul class="menu-list">
            <li>
                <!---->
                <!---->
                <a>
                    <!---->
                    Category
                </a>
            </li>
            <li>
                <!---->
                <!---->
                <a>
                    <!---->
                    Address
                </a>
            </li>
        </ul>
        <!---->
    </li>
</ul>
`;

exports[`SpaceMenu component Render with submenu other selected menu 1`] = `
<ul data-server-rendered="true" class="menu-list">
    <li>
        <!---->
        <!----><a><span class="icon"><i class="fa fa-user"></i></span>
                    Customer
                </a></li>
    <li><span><span class="icon"><i class="fa fa-user"></i></span> Setting
        </span>
        <ul class="menu-list">
            <li>
                <!---->
                <!---->
                <a class="is-active">
                    <!---->
                    Category
                </a>
            </li>
            <li>
                <!---->
                <!---->
                <a>
                    <!---->
                    Address
                </a>
            </li>
        </ul>
        <!---->
    </li>
</ul>
`;

exports[`View Selector component Render 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a></a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <!---->
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;

exports[`View Selector component Render unclickable selected 1`] = `
<div data-server-rendered="true" class="columns is-gapless" style="margin-top:5px;">
    <!---->
    <div class="column" style="padding-left:10px;padding-right:10px;">
        <nav class="nav" style="background-color:inherit;">
            <div class="nav-left">
                <!---->
                <nav class="breadcrumb">
                    <ul>
                        <li class="is-active"><a></a></li>
                    </ul>
                </nav>
            </div>
            <div class="nav-right">
                <!---->
                <!---->
            </div>
        </nav>
        <!---->
    </div>
    <!---->
</div>
`;
